Обновлена документация
